--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,78 +1,1 @@
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="shortcut icon" href="imagenes/polar.png" type="image/x-icon">
-    
-</head>
-<body>
-    <header>
-        <nav class="menu">
-            <a href="#">¿QUIEN SOY?</a>
-            <a href="#">PASATIEMPOS</a>
-            <a href="#">AMIGOS</a>
-            <a href="#">LUNA</a>
-        </a><a href="#">FAMILIA</a>
-        </nav>
-        <hr>
-        <section class="textos-header">
-            <h1 class="texto">AQUI UN POCO DE MI</h1>
-            <img width="250px" src="imagenes/FOTO1.jpg" alt="" class="imagen-uno">
-        </section>
-        <div class="ola" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.85 C182.62,146.15 349.20,-49.85 500.00,49.85 L500.00,149.60 L0.00,149.60 Z" style="stroke: none; fill: rgb(14, 53, 57);"></path></svg></div>
-    </header>
-    <main>
-        <section class="YO">
-            <h2 class="primero">QUIEN SOY</h2>
-            <p>
-              Permiteme presentarme, me llamo Nathaly Denisse Pinguil Ramon, soy de nacionalidad Ecuatoriana, de la provincia del Azuay, naci en el canton Cuenca, un 04 de Febrero del 2004, a las 7:15pm de un Miercoles, actualmente tengo 18 años.Me encantan los animales, la musica, el deporte, soy algo timida, pero alegre, me encanta la soledad, no me incomoda estar con gente, pero siento que no encajo, y al estar sola, me siento yo.
-            </p>
-        </section>
-        <hr>
-        <section class="PASATIEMPOS">
-            <h2 class="segundo">PASATIEMPOS</h2>
-            <p>
-                Me gusta mucho la musica, no tengo un genenro en especial, solo me gusta y ya,me gusta bailar, cantar, leer, limpiar mi casa, pero todas estas actividades me gusta hacer sola, y me encanta el deporte, todos, artes marciales, futbol, natacion, baleet, gimmnasia, voley, patinaje... todos, menos basquetbol. 
-            </p>
-            <img width="250px" src="imagenes/LECTIURA.jpg" alt="" class="imagen-2">
-            <img width="250px" src="imagenes/MUSICA1.jpg" alt="" class="imagen-3">
-            <img width="250px" src="imagenes/FUTBOL.jpg" alt="" class="imagen-4">
-
-        </section>
-        <hr>  
-        <section class="AMIGOS">
-            <h2 class="tercero">AMIGOS</h2>
-            <p>
-                La verdad es que no tengo muchos amigos, pero los pocos que tengo valen oro, y los aprecio muschisimo.
-            </p>
-            <img width="250px" src="imagenes/FOTO2.jpg" alt="" class="imagen-5">
-            <img width="250px" src="imagenes/FOTO4.jpg" alt="" class="imagen-6">
-            <img width="250px" src="imagenes/FOTO5.jpg" alt="" class="imagen-7">
-        </section>
-        <hr>
-        <section class="LUNA">
-            <h2 class="desarrollo4">LUNA</h2>
-            <h3><span></span>Es mi perrita</h3>
-            <img width="250px" src="imagenes/FOTO3.jpg" alt="" class="imagen-8">
-            <p>
-                Luna, ella es la perrita que adopte el 03 de Septiembre del 2020, desde ese dia, doy todo por ella, la quieo muchisimo si no es que la amo, es mi mejor mejor amiga, es que es parte de mi familia, siempre esta conmigo, me da cariño, habla conmigo, hace mas por mi que yo por ella, es hermosa y unica.
-            </p>
-        </section>
-        <hr>
-        <section>
-            <h2 class="desarrollo5">FAMILIA</h2>
-            <p>
-                Mi familia es pequeña, pues  solo la componen mi mamá, mi hermano, luna y yo.
-            </p>
-            <img width="250px" src="imagenes/FOTO6.jpg" alt="" class="imagen-8">
-        </section>
-        <hr> 
-    <footer class="pie">
-        <h3>MUCHAS GRACIAS !!</h3>
-    </footer>
-</body>
-</html>
+<h1>Mi nombre es nathaly Pinguil</h1>
